# seif

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RESONANCE.json  RESONANCE.json.ots  SECURITY.md  packages.txt  pyproject.toml  requirements-gate.txt  requirements.txt
.githooks/: pre-commit  prepare-commit-msg
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  meditation.yml  protect-main.yml  quality-gate-pr.yml
docs/: GUIDE.md  LAYERS.md  PITCH.md  dia-skills.md  seif-pitch.md
docs/kb/: 02-kb-snapshot-v0.1.md  kb-schema.md
plugins/claude-code/: README.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: circuit-check.sh  circuit-monitor.py  classification-gate.sh  orchestra-probe.py  quality-gate.sh  session-end.sh  session-start.sh
scripts/: analyze_genesis.py  create_review_module.py  hook_measure.py  measure.py  meditation.py  prepare-commit-msg  propose_change.py  seif_review.py  start_session.py  startup_prompt.py  status.py  sync_assets.py  verify_resonance.py
src/seif/: __main__.py  constants.py
src/seif/analysis/: artifact_analyzer.py  audio_analyzer.py  giza_engine.py  pattern_comparator.py  phi_damping.py  physical_constants.py  qr_decoder.py  quality_gate.py  seed_optimizer.py  stance_detector.py  transcompiler.py
src/seif/bridge/: __init__.py  native_client.py  telegram_bot.py
src/seif/cli/: __main__.py  chat.py  cli.py  identity.py  main.py  resonance_display.py  serve.py  serve_v2.py  wrapper.py
src/seif/context/: advisor.py  autonomous.py  cli_scanner.py  code_compressor.py  context_bridge.py  context_importer.py  context_manager.py  context_qr.py  cycle.py  doc_generator.py  file_extractor.py  git_context.py  git_hooks.py  handoff.py  ingest.py  nucleus.py  ref.py  registry.py  seif_io.py  (+2 more)
tests/: test_advisor.py  test_canonical_inputs.py  test_code_compressor.py  test_collaborative_seif.py  test_context_qr.py  test_context_repo.py  test_dual_qr.py  test_evolution.py  test_fractal_qrcode.py  test_git_context.py  test_git_hooks.py  test_ingest.py  test_init.py  test_kicad_exporter.py  test_phi_damping.py  test_quality_gate.py  test_ref.py  test_registry.py  test_resonance_gate.py  test_seed_optimizer.py  test_seif_io.py  test_spice_netlist.py  test_stance_detector.py  test_streaming_watermark.py  test_transcompiler.py  test_transfer_function.py  test_triple_gate.py  test_watermark.py  test_workspace.py
web/: app.py
web/i18n/: en.json  pt_br.json
(+36 files in other folders)
