[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seif-cli"
version = "0.4.1"
description = "Measure AI output quality, protect sensitive data, watch your AI environment resonate. Quality Gate, Classification, Sentinel & Auto-Healing, SEIF OS."
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.11"
authors = [
    {name = "André Cunha Antero de Carvalho"},
]
keywords = [
    "ai-quality", "llm-guardrails", "ai-consensus", "data-classification",
    "context-management", "ai-safety", "multi-ai", "quality-gate",
    "prompt-evaluation", "ai-grounding", "resonance", "sentinel",
    "self-healing", "seif-os", "circuit-state", "ai-observability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core: quality gate + context + classification (no heavy deps)
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
# Inter-AI consensus (needs API client)
consensus = [
    "anthropic>=0.80",
]
# Visual generators (fractal QR, glyphs, circuits, audio)
generators = [
    "matplotlib>=3.9",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "svgwrite>=1.4",
]
# Web interface (Streamlit dashboard)
web = [
    "streamlit>=1.28",
]
# Telegram bot bridge
telegram = [
    "python-telegram-bot>=21.0",
]
# QR code generation and decoding
qr = [
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "pyzbar>=0.1.9",
]
# Everything
all = [
    "seif[consensus,generators,web,telegram,qr]",
]

[project.urls]
Homepage = "https://seifprotocol.com"
Documentation = "https://seifprotocol.com/docs"
Repository = "https://github.com/and2carvalho/seif"
Changelog = "https://github.com/and2carvalho/seif/releases"

[project.scripts]
seif = "seif.cli.wrapper:main"
seif-cli = "seif.cli.wrapper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seif = [
    "py.typed",
    "data/RESONANCE.json",
    "data/defaults/*.seif",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
